[package]
name = "mailsync"
version = "0.1.0"
authors = ["zentauro <pedrogomezmartin1999@gmail.com>"]
edition = "2018"
description = "Sync your IMAP boxes to your local maildir asynchronously"
documentation = "https://github.com/ZenTauro/mailsync"
readme = "README.md"
homepage = "https://github.com/ZenTauro/mailsync"
repository = "https://github.com/ZenTauro/mailsync"
license = "AGPL-3.0-or-later"
keywords = ["mail", "async", "cmd", "tool"]
categories = ["command-line-utilities", "email", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = "0.5.0"
async-std = "1.9.0"
nom = "7.0.0"
